# MA_Sentry

./: CMakeLists.txt  DEBUG.md  README.md  TODO.md  pathFollower.cpp
FAST_LIO/: package.xml
FAST_LIO/config/: mid360.yaml
FAST_LIO/launch/: mapping_mid360.launch
bash/: serial.sh
include/rm_decision/: final_decision.hpp
lakibeam1_ros_v1_0_0/launch/: lakibeam1_pcd.launch
livox_ros_driver2/config/: mixed_HAP_MID360_config.json
ma_sentry_bringup/: CMakeLists.txt  package.xml
ma_sentry_bringup/config/: base_local_planner_params.yaml  cloud_filter_params.yaml  costmap_common_params.yaml  demo_3d.lua  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
ma_sentry_bringup/launch/: cartographer_bringup.launch  demo.launch  fast_lio_bringup.launch  faster_lio_bringup.launch  gmapping_bringup.launch  load_sentry.launch  ma_2d_robot.launch  ma_2d_robot_bringup.launch  ma_2d_robot_gmapping.launch  ma_2d_robot_nav.launch  ma_sentry_bringup.launch  octomap_bringup.launch  octomap_saver.launch  sentry_global_planner.launch
ma_sentry_bringup/meshes/: 3_Link.STL  omni_roller.stl
ma_sentry_bringup/src/: change_clock_wise_dir.cc  cloud_filter.cc
ma_sentry_bringup/urdf/: chassis.urdf.xacro  ma_sentry.urdf.xacro
ma_sentry_bringup/urdf/common/: omni_wheel.urdf.xacro
ma_sentry_bringup/urdf/sentry/: chassis.transmission.urdf.xacro
pointcloud_to_laserscan/launch/: point_to_scan.launch
rm_control/: README.md
rm_control/ma_sentry_urdf/: CMakeLists.txt  package.xml
rm_control/ma_sentry_urdf/launch/: display.launch  gazebo.launch
rm_control/ma_sentry_urdf/meshes/: 2_Link.STL
rm_control/ma_sentry_urdf/urdf/: │╡╝▄╫▄│╔.urdf
rm_control/ma_serial_port/: CMakeLists.txt
rm_control/ma_serial_port/config/: serial_config.yaml
rm_control/ma_serial_port/include/ma_serial_port/: crc.hpp  ma_serial.hpp  ma_serial_2d.hpp
rm_control/ma_serial_port/launch/: ma_msg_2d.launch  ma_msg_pub.launch
rm_control/ma_serial_port/src/: crc.cc  ma_serial.cc  ma_serial_2d_rec.cc  patrol.cc
rm_control/rm_config/: CMakeLists.txt  package.xml
rm_control/rm_config/config/handeye/: settings.yaml  tags.yaml
rm_control/rm_config/config/rm_control/rm_hw/: balance.yaml  balance2.yaml  dart.yaml  drone.yaml  engineer.yaml  hero.yaml  hero2.yaml  my_sentry.yaml  sentry.yaml  spare_sentry.yaml  standard3.yaml  standard4.yaml  standard5.yaml  standard6.yaml
rm_control/rm_config/config/rm_controllers/: balance.yaml  balance2.yaml  dart.yaml  drone.yaml  engineer.yaml  hero.yaml  hero2.yaml  my_sentry.yaml  sentry.yaml  spare_sentry.yaml  standard3.yaml  standard4.yaml  standard5.yaml  standard6.yaml
rm_control/rm_config/config/rm_manual/: balance.yaml  balance2.yaml  dart.yaml  engineer.yaml  hero.yaml  hero2.yaml  my_sentry.yaml  standard4.yaml  standard5.yaml  standard6.yaml
rm_control/rm_config/config/rm_referee/: balance.yaml  balance2.yaml  dart.yaml  engineer.yaml  hero.yaml  hero2.yaml  spare_sentry.yaml  standard3.yaml  standard4.yaml  standard6.yaml
rm_control/rm_config/config/rm_track/: default.yaml  sentry.yaml  settings.yaml  tags.yaml
rm_control/rm_config/config/vision/: camera.yaml  sentry.yaml
rm_control/rm_config/launch/: load_controllers.launch  manual.launch  my_load_controller.launch  my_manual.launch  my_rm_hw.launch  referee.launch  rm_hw.launch
rm_control/rm_config/launch/vision/: apriltag_handeye.launch  camera.launch  sentry_camera.launch  sentry_vision_loader.launch  track_apriltag.launch  vision_loader.launch
rm_control/rm_control/ma_serial_port/: package.xml
rm_control/rm_control/velocity_smoother_ema/: ema.cc
rm_control/rm_decision/: CMakeLists.txt  package.xml
rm_control/rm_decision/config/: final_tree.xml
rm_control/rm_decision/include/rm_decision/: final_decision.hpp  final_decision_mb.hpp  patrol.hpp  random_explore.hpp
rm_control/rm_decision/rm_decision/: package.xml
rm_control/rm_decision/rm_decision/config/: final_tree.xml  test.xml
rm_control/rm_decision/rm_decision/include/rm_decision/: ctrol_c.txt  final_decision.hpp  pregoal.hpp
rm_control/rm_decision/rm_decision/src/: final_decision.cc  pre_goal.cc
rm_control/rm_decision/src/: final_decision.cc  final_decision_mb.cc  patrol.cc  pre_goal.cc  random_explore.cc  random_radius_explore.cc
rm_control/rm_description/launch/: check_joint.launch
rm_control/rm_manual/: CMakeLists.txt  README.md  doxygen.yml  package.xml
rm_control/rm_manual/launch/: load.launch  my_load.launch
rm_control/rm_manual/src/: balance_manual.cpp  chassis_gimbal_manual.cpp  chassis_gimbal_shooter_cover_manual.cpp  chassis_gimbal_shooter_manual.cpp  dart_manual.cpp  engineer_manual.cpp  main.cpp  manual_base.cpp  my_sentry_manual.cpp
rm_control/velocity_smoother_ema/param/: smoother.yaml
rm_control/velocity_smoother_ema/src/: velocity_smoother_ema.cpp
rm_control/yocs_velocity_smoother/launch/: velocity_smoother.launch
rm_localization/faster-lio/config/: mid360.yaml
rm_localization/faster-lio/launch/: mapping_mid360.launch
rm_localization/faster-lio/src/: laser_mapping.cc
rm_localization/libnabo/: CHANGELOG.rst  CMakeLists.txt  CatkinBuild.cmake  Doxyfile.in  PureCMakeBuild.cmake  README.md  jenkins-pipeline  package.xml
rm_localization/libnabo/.github/workflows/: ccpp.yml
rm_localization/libnabo/cmake/: FindFlann.cmake
rm_localization/libnabo/debian_legacy/: control  copyright
rm_localization/libnabo/nabo/: nabo.h
rm_localization/libnabo/tests/: CMakeLists.txt
rm_localization/libpointmatcher/: CMakeLists.txt  CatkinBuild.cmake  PureCMakeBuild.cmake  jenkins-pipeline  package.xml
rm_localization/libpointmatcher/doc/: Datafilters.md  UnitTestDev.md
rm_localization/pointmatcher-ros/: CMakeLists.txt
rm_localization/sequential_way_points/: CMakeLists.txt  package.xml
rm_sensors_driver/livox_ros_driver2/: CMakeLists.txt
rm_simulation/ma_simulation/: CMakeLists.txt  package.xml
rm_simulation/sentry_controller/: CMakeLists.txt  package.xml
src/: final_decision.cc
(+114 files in other folders)
