<?xml version="1.0"?>
<package format="2">
    <name>rm_config</name>
    <version>0.0.0</version>
    <description>The rm_config package</description>
    <maintainer email="mlione@qq.com">mlione</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <export>
    <!-- Other tools can request additional information be placed here -->
    </export>
</package>
